--- a/gerador.html
+++ b/gerador.html
@@ -16,6 +16,8 @@
                 <button type="button" class="btn btn-danger" onclick="duplaSena()">Dupla Sena</button>
                 <button type="button" class="btn btn-warning" onclick="lotomania()">Lotomania</button>
                 <button type="button" class="btn btn-warning" onclick="timemania()">Timemania</button>
+                <button type="button" class="btn btn-warning" onclick="diaSorte()">Dia de Sorte</button>
+                <button type="button" class="btn btn-warning" onclick="superSete()">Super Sete</button>
             </div>
             <div class="row my-3 alert alert-success" id="numerosGerados" style="display: none;">
             </div>  
